Kann Datein in richtige Ordner erzeugen

--- a/macroobject-plugin/pom.xml
+++ b/macroobject-plugin/pom.xml
@@ -1,25 +1,104 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>de.htwsaarland</groupId>
-  <artifactId>macroobject-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>de.htwds</groupId>
+	<artifactId>macroobject-maven-plugin</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<description>
+		plugin to generate source from objectmacro files
+	</description>
+	<packaging>maven-plugin</packaging>
 
-  <name>macroobject-plugin</name>
-  <url>http://maven.apache.org</url>
+	<name>macroobject-plugin</name>
+	<url>http://mathcoach.htw-saarland.de</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	
+	<build>
+		<plugins>
+			<!-- plugin>
+				<groupId>de.htwds</groupId>
+				<artifactId>macroobject-maven-plugin</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<executions>
+					<execution>
+						<configuration>
+							<greeting>Welcome</greeting>
+						</configuration>
+						<goals>
+							<goal>sayhi</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<!-- see http://jira.codehaus.org/browse/MNG-5346 -->
+					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+				</configuration>
+				<executions>
+					<execution>
+						<id>mojo-descriptor</id>
+						<goals>
+							<goal>descriptor</goal>
+						</goals>
+					</execution>
+					<!-- if you want to generate help goal -->
+					<execution>
+						<id>help-goal</id>
+						<goals>
+							<goal>helpmojo</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+  
+	<dependencies>
+		<!-- dependencies to annotations -->
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<version>3.2</version>
+			<!-- annotations are not needed for plugin execution so you can remove this dependency
+   for execution with using provided scope -->
+			<!--scope>provided</scope-->
+		</dependency>
+		<!-- generated help mojo has a dependency to plexus-utils -->
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-utils</artifactId>
+			<version>3.0.1</version>
+		</dependency>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>3.0</version>
+			<type>jar</type>
+		</dependency>
+	</dependencies>
+  
+	<distributionManagement>
+		<snapshotRepository>
+			<id>newton</id>
+			<name>newton-snapshots</name>
+			<url>http://newton.htw-saarland.de:8085/artifactory/plugins-snapshot-local</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
+
