--- a/objectmacro-plugin/pom.xml
+++ b/objectmacro-plugin/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.htwds</groupId>
 	<artifactId>objectmacro-maven-plugin</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0-beta</version>
 	<description>
 		Plugin to generate source from objectmacro files
 	</description>
@@ -28,6 +28,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<internal.repo.path>file:///home/phucluoi/Documents/hobby/mvn-repo/</internal.repo.path>
 	</properties>
 	
 	<build>
@@ -93,9 +94,8 @@
 		<dependency>
 			<groupId>org.sablecc</groupId>
 			<artifactId>objectmacro</artifactId>
-			<version>4.0-SNAPSHOT</version>
+			<version>4-beta.4</version>
 		</dependency>
-
 		<!--		
 				<dependency>
 					<groupId>org.apache.maven.shared</groupId>
@@ -111,15 +111,24 @@
 			<type>jar</type>
 		</dependency>
 		-->
-
+		
 	</dependencies>
-
+	<!--
+		<distributionManagement>
+			<snapshotRepository>
+				<id>newton</id>
+				<name>newton-snapshots</name>
+				<url>http://newton.htw-saarland.de:8085/artifactory/plugins-snapshot-local</url>
+			</snapshotRepository>
+		</distributionManagement>
+	-->
+	
 	<distributionManagement>
-		<snapshotRepository>
-			<id>newton</id>
-			<name>newton-snapshots</name>
-			<url>http://newton.htw-saarland.de:8085/artifactory/plugins-snapshot-local</url>
-		</snapshotRepository>
+		<repository>
+			<id>internal.repo</id>
+			<name>Internal Repository</name>
+			<url>${internal.repo.path}</url>
+		</repository>
 	</distributionManagement>
 </project>
 
