--- a/plugin-user-test/pom.xml
+++ b/plugin-user-test/pom.xml
@@ -19,7 +19,7 @@
 			<plugin>
 				<groupId>de.htwds</groupId>
 				<artifactId>objectmacro-maven-plugin</artifactId>
-				<version>1.0-SNAPSHOT</version>
+				<version>1.0-beta</version>
 				<configuration>
 					<generateCode>true</generateCode>
 					<strict>true</strict>
@@ -37,6 +37,8 @@
 									<file>src/main/resources/simple.objectmacro</file>
 									<language>scala</language>
 									<packagename>de.htwds</packagename>
+								</template>
+								<template><!-- no file-tag causes a null -->
 								</template>
 								<!-- 
 								<template>
