--- a/objectmacro-plugin/pom.xml
+++ b/objectmacro-plugin/pom.xml
@@ -17,7 +17,7 @@
 	</developers>
 
 	<name>objectmacro-plugin</name>
-	<url>http://mathcoach.htw-saarland.de</url>
+	<url>https://github.com/verylazyboy/maven-plugin/tree/master/objectmacro-plugin</url>
 
 	<prerequisites>
 		<maven>3.0+</maven>
@@ -28,7 +28,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<internal.repo.path>file:///home/phucluoi/Documents/hobby/mvn-repo/</internal.repo.path>
 	</properties>
 	
 	<build>
@@ -66,24 +65,21 @@
 			<groupId>org.apache.maven.plugin-tools</groupId>
 			<artifactId>maven-plugin-annotations</artifactId>
 			<version>3.2</version>
-			<!-- annotations are not needed for plugin execution so you can remove this dependency
-   for execution with using provided scope -->
+			<!-- 
+	 		annotations are not needed for plugin 
+	 		execution so you can remove this dependency
+				for execution with using provided scope 
+			-->
 			<!--scope>provided</scope-->
 		</dependency>
 		<!-- generated help mojo has a dependency to plexus-utils -->
-		<dependency>
+		<!-- dependency>
 			<groupId>org.codehaus.plexus</groupId>
 			<artifactId>plexus-utils</artifactId>
-			<version>3.0.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>2.0.6</version>
 			<scope>test</scope>
-		</dependency>
-
+		</dependency -->
+		
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
@@ -96,37 +92,26 @@
 			<artifactId>objectmacro</artifactId>
 			<version>4-beta.4</version>
 		</dependency>
-		<!--		
-				<dependency>
-					<groupId>org.apache.maven.shared</groupId>
-					<artifactId>maven-plugin-testing-harness</artifactId>
-					<version>1.1</version>
-					<scope>test</scope>
-				</dependency>
+		
 		<dependency>
 			<groupId>org.apache.maven.plugin-testing</groupId>
 			<artifactId>maven-plugin-testing-harness</artifactId>
-			<version>2.0-alpha-1</version>
+			<version>2.1</version>
 			<scope>test</scope>
-			<type>jar</type>
 		</dependency>
-		-->
-		
 	</dependencies>
-	<!--
-		<distributionManagement>
-			<snapshotRepository>
-				<id>newton</id>
-				<name>newton-snapshots</name>
-				<url>http://newton.htw-saarland.de:8085/artifactory/plugins-snapshot-local</url>
-			</snapshotRepository>
-		</distributionManagement>
-	-->
+	
+	
+	
+	
 	
 	<distributionManagement>
 		<repository>
 			<id>internal.repo</id>
 			<name>Internal Repository</name>
+			<!-- ================ C A U T I O N =======================
+				Define this property in your settings.xml! 
+			=========================================================== -->
 			<url>${internal.repo.path}</url>
 		</repository>
 	</distributionManagement>
