--- a/objectmacro-plugin/pom.xml
+++ b/objectmacro-plugin/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.htwds</groupId>
 	<artifactId>objectmacro-maven-plugin</artifactId>
-	<version>1.0-beta</version>
+	<version>1.0-beta.1</version>
 	<description>
 		Plugin to generate source from objectmacro files
 	</description>
@@ -64,10 +64,10 @@
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
 			<artifactId>maven-plugin-annotations</artifactId>
-			<version>3.2</version>
+			<version>3.1</version>
 			<!-- 
-	 		annotations are not needed for plugin 
-	 		execution so you can remove this dependency
+ 		annotations are not needed for plugin 
+ 		execution so you can remove this dependency
 				for execution with using provided scope 
 			-->
 			<!--scope>provided</scope-->
@@ -86,7 +86,13 @@
 			<version>3.0</version>
 			<type>jar</type>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.sablecc</groupId>
 			<artifactId>objectmacro</artifactId>
