--- a/plugin-user-test/pom.xml
+++ b/plugin-user-test/pom.xml
@@ -137,6 +137,28 @@
 					</execution>
 				</executions>
 			</plugin-->
+			<plugin>
+				<groupId>de.htwds</groupId>
+				<artifactId>sablecc-maven-plugin</artifactId>
+				<version>1.0-beta.0</version>
+				<executions>
+					<execution>
+						<configuration>
+							<grammars>
+								<grammar>
+									<file>src/main/resources/java-1.5.scc</file>
+								</grammar>
+								<grammar>
+									<file>src/main/resource/</file>
+								</grammar>
+							</grammars>
+						</configuration>
+						<goals>
+							<goal>sablecc</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>	  
 	</build>
 
