--- a/sablecc-maven-plugin/pom.xml
+++ b/sablecc-maven-plugin/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>sablecc-maven-plugin</artifactId>
   <version>1.0-beta.0</version>
 	<description>
-		Plugin to generate source from objectmacro files
+		Plugin to generate parser from sablecc files using SableCC 3.7
 	</description>
 	<packaging>maven-plugin</packaging>
 	<developers>
