--- a/sablecc-maven-plugin/pom.xml
+++ b/sablecc-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.htwds</groupId>
   <artifactId>sablecc-maven-plugin</artifactId>
-  <version>1.0-beta.0</version>
+  <version>1.0-beta.1-SNAPSHOT</version>
 	<description>
 		Plugin to generate parser from sablecc files using SableCC 3.7
 	</description>
