modi POM to prepair to publish in mnv central

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /objectmacro-plugin/target/
 /plugin-user-test/target/
 /plugin-user-test/${gensource.dir}/objectmacro/
+/sablecc-maven-plugin/target/
