--- a/sablecc-maven-plugin/pom.xml
+++ b/sablecc-maven-plugin/pom.xml
@@ -1,24 +1,45 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>de.htwds</groupId>
-  <artifactId>sablecc-maven-plugin</artifactId>
-  <version>1.0-beta.1-SNAPSHOT</version>
+	<groupId>de.htwds</groupId>
+	<artifactId>sablecc-maven-plugin</artifactId>
+	<version>1.0-beta.1-SNAPSHOT</version>
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+	
+	<name>sablecc-maven-plugin</name>
 	<description>
-		Plugin to generate parser from sablecc files using SableCC 3.7
+		Plugin to generate parser from SableCC files using SableCC 3.7
 	</description>
+	<url>https://github.com/verylazyboy/maven-plugin/tree/master/sablecc-maven-plugin</url>
+	
 	<packaging>maven-plugin</packaging>
+	
 	<developers>
 		<developer>
-			<name>Hong Phuc Bui aka. lazyboy</name>
+			<name>Hong Phuc Bui aka. verylazyboy</name>
 			<email>phucluoi@gmail.com</email>
 		</developer>
 	</developers>
 
-	<name>sablecc-maven-plugin</name>
-	<url>https://github.com/verylazyboy/maven-plugin/tree/master/sablecc-maven-plugin</url>
+	<licenses>
+		<license>
+			<name>The BSD 3-Clause License</name>
+			<url>http://opensource.org/licenses/BSD-3-Clause</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
+	<scm>
+		<connection>scm:git:git@github.com:verylazyboy/maven-plugin.git</connection>
+		<url>scm:git:git@github.com:verylazyboy/maven-plugin.git</url>
+		<developerConnection>git@github.com:verylazyboy/maven-plugin.git</developerConnection>
+	</scm>
+	
 	<prerequisites>
 		<maven>3.0+</maven>
 	</prerequisites>
@@ -56,15 +77,37 @@
 					</execution>
 				</executions>
 			</plugin>
-		 <plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-compiler-plugin</artifactId>
-		  <version>2.3.2</version>
-		  <configuration>
-		   <source>1.6</source>
-		   <target>1.6</target>
-		  </configuration>
-		 </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4</version>
+			</plugin>
+			<!--	
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<version>1.4</version>
+					<executions>
+						<execution>
+							<id>sign-artifacts</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>sign</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			-->	
 		</plugins>
 	</build>
   
@@ -75,19 +118,19 @@
 			<artifactId>maven-plugin-annotations</artifactId>
 			<version>3.1</version>
 			<!-- 
- 		annotations are not needed for plugin 
- 		execution so you can remove this dependency
+		annotations are not needed for plugin 
+		execution so you can remove this dependency
 				for execution with using provided scope 
 			-->
-			<!--scope>provided</scope-->
+			<scope>provided</scope>
 		</dependency>
 		<!-- generated help mojo has a dependency to plexus-utils -->
-		<!-- dependency>
+		<dependency>
 			<groupId>org.codehaus.plexus</groupId>
 			<artifactId>plexus-utils</artifactId>
 			<version>2.0.6</version>
 			<scope>test</scope>
-		</dependency -->
+		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.maven</groupId>
@@ -117,17 +160,19 @@
 	</dependencies>
 	
 	
-	
-	
-	
+	<!-- ================ C A U T I O N =======================
+		Define this property in your settings.xml! 
+	=========================================================== -->
 	<distributionManagement>
-		<repository>
+		<!--repository>
 			<id>internal.repo</id>
 			<name>Internal Repository</name>
-			<!-- ================ C A U T I O N =======================
-				Define this property in your settings.xml! 
-			=========================================================== -->
 			<url>${internal.repo.path}</url>
-		</repository>
+		</repository-->
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>sonatype</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+		</snapshotRepository>
 	</distributionManagement>
 </project>
