--- a/sablecc-maven-plugin/pom.xml
+++ b/sablecc-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.htwds</groupId>
 	<artifactId>sablecc-maven-plugin</artifactId>
-	<version>1.0-beta.1-SNAPSHOT</version>
+	<version>2.0-beta.1-SNAPSHOT</version>
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
 		<artifactId>oss-parent</artifactId>
@@ -14,6 +14,7 @@
 	<name>sablecc-maven-plugin</name>
 	<description>
 		Plugin to generate parser from SableCC files using SableCC 3.7
+		New kind of configuration 
 	</description>
 	<url>https://github.com/verylazyboy/maven-plugin/tree/master/sablecc-maven-plugin</url>
 	
