--- a/plugin-user-test/pom.xml
+++ b/plugin-user-test/pom.xml
@@ -44,7 +44,7 @@
 			<plugin>
 				<groupId>de.htwds</groupId>
 				<artifactId>sablecc-maven-plugin</artifactId>
-				<version>2.0-beta.1-SNAPSHOT</version>
+				<version>2.0-beta.1</version>
 				<configuration>
 					<!-- =======================================================
 						the grammar file 
