--- a/sablecc-maven-plugin/pom.xml
+++ b/sablecc-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.htwds</groupId>
 	<artifactId>sablecc-maven-plugin</artifactId>
-	<version>2.0-beta.1-SNAPSHOT</version>
+	<version>2.0-beta.1</version>
 	
 	<name>sablecc-maven-plugin</name>
 	<description>
