--- a/sablecc-maven-plugin/pom.xml
+++ b/sablecc-maven-plugin/pom.xml
@@ -2,9 +2,9 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.htwds</groupId>
+	<groupId>com.github.verylazyboy</groupId>
 	<artifactId>sablecc-maven-plugin</artifactId>
-	<version>2.0-beta.1-SNAPSHOT</version>
+	<version>2.0-beta.2-SNAPSHOT</version>
 	
 	<name>sablecc-maven-plugin</name>
 	<description>
