--- a/plugin-user-test/pom.xml
+++ b/plugin-user-test/pom.xml
@@ -17,32 +17,9 @@
 	
 	<build>
 		<plugins>
-			<!-- ==========================================================
-				You need this plugin to tell Maven to add the generated source
-				in sources. Otherwise you cannot compile files, which depends
-				on generated files. Because they are not in class path.
-				NOTE: you don't need this plugin since the version 1.0-beta.1 
-			============================================================ -->
-			<!-- plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.7</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>${gensource.dir}/objectmacro/</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin-->
+			
 			<plugin>
-				<groupId>de.htwds</groupId>
+				<groupId>com.github.verylazyboy</groupId>
 				<artifactId>sablecc-maven-plugin</artifactId>
 				<version>2.0-beta.2-SNAPSHOT</version>
 				<configuration>
