--- a/plugin-user-test/pom.xml
+++ b/plugin-user-test/pom.xml
@@ -21,7 +21,7 @@
 			<plugin>
 				<groupId>com.github.verylazyboy</groupId>
 				<artifactId>sablecc-maven-plugin</artifactId>
-				<version>2.0-beta.2-SNAPSHOT</version>
+				<version>2.0-beta.2</version>
 				<configuration>
 					<!-- =======================================================
 						the grammar file 
