--- a/sablecc-maven-plugin/pom.xml
+++ b/sablecc-maven-plugin/pom.xml
@@ -4,14 +4,14 @@
 
 	<groupId>com.github.verylazyboy</groupId>
 	<artifactId>sablecc-maven-plugin</artifactId>
-	<version>2.0-beta.2</version>
+	<version>2.0-beta.2-java-6</version>
 	
 	<name>sablecc-maven-plugin</name>
 	<description>
 		Plugin to generate parser from SableCC files using SableCC 3.7
 		New kind of configuration 
 	</description>
-	<url>https://github.com/verylazyboy/maven-plugin/tree/master/sablecc-maven-plugin</url>
+	<url>https://github.com/johnny-bui/maven-plugin/tree/master/sablecc-maven-plugin</url>
 	
 	<packaging>maven-plugin</packaging>
 	
@@ -34,9 +34,9 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:git@github.com:verylazyboy/sablecc-maven-plugin.git</connection>
-		<url>git@github.com:verylazyboy/sablecc-maven-plugin.git</url>
-		<developerConnection>scm:git@github.com:verylazyboy/sablecc-maven-plugin.git</developerConnection>
+		<connection>scm:git:git@github.com:johnny-bui/sablecc-maven-plugin.git</connection>
+		<url>git@github.com:johnny-bui/sablecc-maven-plugin.git</url>
+		<developerConnection>scm:git@github.com:johnny-bui/sablecc-maven-plugin.git</developerConnection>
 	</scm>
 	
 	<prerequisites>
@@ -172,9 +172,6 @@
 	</dependencies>
 	
 	
-	<!-- ================ C A U T I O N =======================
-		Define this property in your settings.xml! 
-	=========================================================== -->
 	<distributionManagement>
 		<repository>
 			<id>sonatype-nexus-staging</id>
