--- a/plugin-user-test/pom.xml
+++ b/plugin-user-test/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 
 	<name>plugin-user-test</name>
-	<url>https://github.com/verylazyboy/maven-plugin/tree/master/plugin-user-test</url>
+	<url>https://github.com/johnny-bui/maven-plugin/tree/master/plugin-user-test</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,7 +21,7 @@
 			<plugin>
 				<groupId>com.github.verylazyboy</groupId>
 				<artifactId>sablecc-maven-plugin</artifactId>
-				<version>2.0-beta.2</version>
+				<version>2.0-beta.2-thread-safe</version>
 				<configuration>
 					<!-- =======================================================
 						the grammar file 
@@ -82,8 +82,8 @@
 						-->
 						<id>complex grammar</id>
 						<configuration>
-							<grammar>src/main/resources/complex.scc</grammar>
-							<destination>${gensource.dir}/complex</destination>
+							<grammar>src/main/resources/java-1.5.scc</grammar>
+							<destination>${gensource.dir}/java_g</destination>
 						</configuration>
 						<goals>
 							<goal>sablecc</goal>
