--- a/plugin-user-test/pom.xml
+++ b/plugin-user-test/pom.xml
@@ -21,7 +21,7 @@
 			<plugin>
 				<groupId>com.github.verylazyboy</groupId>
 				<artifactId>sablecc-maven-plugin</artifactId>
-				<version>2.0-beta.2-thread-safe</version>
+				<version>2.0-beta.3</version>
 				<configuration>
 					<!-- =======================================================
 						the grammar file 
@@ -84,6 +84,7 @@
 						<configuration>
 							<grammar>src/main/resources/java-1.5.scc</grammar>
 							<destination>${gensource.dir}/java_g</destination>
+							<outputPackage>org.sablecc.grammars.java_1_5</outputPackage>
 						</configuration>
 						<goals>
 							<goal>sablecc</goal>
