--- a/sablecc-maven-plugin/pom.xml
+++ b/sablecc-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github.verylazyboy</groupId>
 	<artifactId>sablecc-maven-plugin</artifactId>
-	<version>2.0-beta.2-thread-safe</version>
+	<version>2.0-beta.3</version>
 	
 	<name>sablecc-maven-plugin</name>
 	<description>
